--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   flutter_expandable_fab: ^2.5.2
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
+  supabase_flutter: ^2.10.2
+  get_it: ^8.2.0
+  fpdart: ^1.1.1
+  logger: ^2.6.1
 
 dev_dependencies:
   flutter_test:
